--- a/projects/settings/src/lib/application/pages/tabs/tabs.component.html
+++ b/projects/settings/src/lib/application/pages/tabs/tabs.component.html
@@ -2,7 +2,7 @@
   <nz-card-tab>
     <nz-tabset nzSize="large" nzLinkRouter [nzAnimated]="false" [nzTabBarExtraContent]="extra">
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'application', 'pages', key, 'schema']"> 数据源 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'application', 'pages', key, 'schema']"> 内容模型 </a>
       </nz-tab>
       <nz-tab>
         <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'application', 'pages', key, 'indexes']"> 索引规则 </a>
