--- a/projects/settings/src/lib/application/roles/roles.component.html
+++ b/projects/settings/src/lib/application/roles/roles.component.html
@@ -25,7 +25,7 @@
         <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
           <i nz-icon nzType="clear"></i>
         </button>
-        <button nz-button [nzType]="filter ? 'link' : 'text'" nz-tooltip="筛选" (click)="filter = !filter">
+        <button nz-button nzType="text" nz-tooltip="筛选" (click)="openFilter()">
           <i nz-icon nzType="filter"></i>
         </button>
       </nz-button-group>
@@ -33,7 +33,7 @@
   </nz-row>
 </wpx-layout>
 
-<nz-card *ngIf="filter">
+<ng-template #filterTemplate>
   <nz-tag
     nzMode="checkable"
     [nzChecked]="labels.length === matchLabels.size"
@@ -46,7 +46,7 @@
       {{ x }}
     </nz-tag>
   </ng-container>
-</nz-card>
+</ng-template>
 
 <div style="margin-top: 12px">
   <nz-list nzGrid nzItemLayout="vertical">
