--- a/projects/settings/src/lib/application/pages/home/home.component.html
+++ b/projects/settings/src/lib/application/pages/home/home.component.html
@@ -13,7 +13,7 @@
           <li>
             👉 『<i nz-icon nzType="tags"></i> 数据标签』创建一个集合，用于支持数据标签引用，创建后在『资源』中管理；
           </li>
-          <li>👉 『<i nz-icon nzType="database"></i> 数据统计』 引用数据聚合，生成数据汇总、趋势分析等图表；</li>
+          <li>👉 『<i nz-icon nzType="dashboard"></i> 数据统计』 引用数据聚合，生成数据汇总、趋势分析等图表；</li>
           <li>👉 『<i nz-icon nzType="group"></i> 导航分组』导航中设置其他种类的显示分组。</li>
         </ul>
       </div>
