--- a/projects/settings/src/lib/security/audit/audit.component.html
+++ b/projects/settings/src/lib/security/audit/audit.component.html
@@ -1,9 +1,5 @@
-<wpx-layout [wpxSkip]="true"></wpx-layout>
-
-<ng-template #title><b>审计工单</b></ng-template>
-
-<nz-card [nzTitle]="title">
-  <nz-list nzSize="large" nzItemLayout="horizontal">
+<nz-card nzTitle="审计工单">
+  <nz-list nzItemLayout="horizontal">
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
