--- a/projects/components/table/table.component.html
+++ b/projects/components/table/table.component.html
@@ -1,20 +1,29 @@
 <ng-template #searchRef>
-  <nz-row [nzGutter]="12">
+  <nz-row [nzGutter]="6">
     <nz-col>
-      <nz-input-group nzCompact>
+      <nz-input-group nzSuffixIcon="search">
         <input
           (keyup.enter)="submitSearch()"
           [(ngModel)]="searchText"
-          style="width: 420px"
+          style="width: 200px"
           type="text"
           nz-input
-          placeholder="请输入搜索关键词"
+          placeholder="请输入关键词"
         />
-        <button (click)="submitSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
       </nz-input-group>
     </nz-col>
     <nz-col>
-      <a nz-button nzType="link" (click)="openSearchForm()">高级搜索</a>
+      <nz-button-group>
+        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+          <i nz-icon nzType="reload"></i>
+        </button>
+        <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+          <i nz-icon nzType="clear"></i>
+        </button>
+        <button nz-button nzType="text" nz-tooltip="高级搜索" (click)="openSearchForm()">
+          <i nz-icon nzType="filter"></i>
+        </button>
+      </nz-button-group>
     </nz-col>
   </nz-row>
   <nz-drawer
@@ -67,64 +76,7 @@
   </nz-drawer>
 </ng-template>
 
-<ng-template #toolRef>
-  <nz-button-group>
-    <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
-      <i nz-icon nzType="reload"></i>
-    </button>
-    <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
-      <i nz-icon nzType="clear"></i>
-    </button>
-    <button
-      nz-button
-      nzType="text"
-      nz-tooltip="设置"
-      nz-popover
-      nzPopoverPlacement="bottomRight"
-      nzPopoverTrigger="click"
-      [nzPopoverTitle]="columnsTitle"
-      [nzPopoverContent]="columnsContent"
-    >
-      <i nz-icon nzType="setting"></i>
-      <ng-template #columnsTitle>
-        <nz-row nzJustify="space-between">
-          <nz-col>
-            <label nz-checkbox [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()">
-              自定义宽度
-            </label>
-          </nz-col>
-          <nz-col></nz-col>
-          <nz-col> </nz-col>
-        </nz-row>
-      </ng-template>
-      <ng-template #columnsContent>
-        <nz-checkbox-wrapper (nzOnChange)="updateColumnChecked()">
-          <nz-space nzDirection="vertical">
-            <nz-radio-group *nzSpaceItem nzSize="small" [(ngModel)]="columnsHeight" (ngModelChange)="updateStorage()">
-              <label nz-radio-button nzValue="default">默认</label>
-              <label nz-radio-button nzValue="middle">中等</label>
-              <label nz-radio-button nzValue="small">紧凑</label>
-            </nz-radio-group>
-            <label
-              *nzSpaceItem
-              nz-checkbox
-              [(ngModel)]="columnsChecked"
-              (ngModelChange)="updateColumnsChecked()"
-              [nzIndeterminate]="columnsIndeterminate"
-            >
-              全部展示
-            </label>
-            <ng-container *ngFor="let column of columns">
-              <label *nzSpaceItem nz-checkbox [nzValue]="column.value" [(ngModel)]="column.checked">
-                {{ column.label }}
-              </label>
-            </ng-container>
-          </nz-space>
-        </nz-checkbox-wrapper>
-      </ng-template>
-    </button>
-  </nz-button-group>
-</ng-template>
+<ng-template #toolRef> </ng-template>
 
 <ng-template #bulkRef>
   <nz-alert nzType="info" nzBanner [nzMessage]="message"></nz-alert>
@@ -142,8 +94,8 @@
 
 <nz-table
   #basicTable
+  nzSize="small"
   [nzLoading]="ds.loading"
-  [nzSize]="columnsHeight"
   [nzData]="ds.values"
   [nzScroll]="wpxScroll"
   [nzFrontPagination]="false"
@@ -157,7 +109,7 @@
   <thead>
     <tr>
       <th
-        nzWidth="65px"
+        nzWidth="50px"
         nzLeft
         nzAlign="center"
         [nzChecked]="ds.checked"
@@ -187,7 +139,61 @@
           </nz-resize-handle>
         </th>
       </ng-container>
-      <th nzWidth="100px" nzRight nzAlign="center"> 操作 </th>
+      <th nzWidth="64px" nzRight nzAlign="center">
+        <button
+          nz-button
+          nzType="text"
+          nz-tooltip="设置"
+          nz-popover
+          nzPopoverPlacement="bottomRight"
+          nzPopoverTrigger="click"
+          [nzPopoverTitle]="columnsTitle"
+          [nzPopoverContent]="columnsContent"
+        >
+          <i nz-icon nzType="setting"></i>
+          <ng-template #columnsTitle>
+            <nz-row nzJustify="space-between">
+              <nz-col>
+                <label nz-checkbox [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()">
+                  自定义宽度
+                </label>
+              </nz-col>
+              <nz-col></nz-col>
+              <nz-col> </nz-col>
+            </nz-row>
+          </ng-template>
+          <ng-template #columnsContent>
+            <nz-checkbox-wrapper (nzOnChange)="updateColumnChecked()">
+              <nz-space nzDirection="vertical">
+                <nz-radio-group
+                  *nzSpaceItem
+                  nzSize="small"
+                  [(ngModel)]="columnsHeight"
+                  (ngModelChange)="updateStorage()"
+                >
+                  <label nz-radio-button nzValue="default">默认</label>
+                  <label nz-radio-button nzValue="middle">中等</label>
+                  <label nz-radio-button nzValue="small">紧凑</label>
+                </nz-radio-group>
+                <label
+                  *nzSpaceItem
+                  nz-checkbox
+                  [(ngModel)]="columnsChecked"
+                  (ngModelChange)="updateColumnsChecked()"
+                  [nzIndeterminate]="columnsIndeterminate"
+                >
+                  全部展示
+                </label>
+                <ng-container *ngFor="let column of columns">
+                  <label *nzSpaceItem nz-checkbox [nzValue]="column.value" [(ngModel)]="column.checked">
+                    {{ column.label }}
+                  </label>
+                </ng-container>
+              </nz-space>
+            </nz-checkbox-wrapper>
+          </ng-template>
+        </button>
+      </th>
     </tr>
   </thead>
   <tbody>
