--- a/projects/components/dynamic/table/table.component.html
+++ b/projects/components/dynamic/table/table.component.html
@@ -4,6 +4,6 @@
   </button>
 </wpx-layout>
 
-<nz-card [nzLoading]="table.ds.loading" [nzTitle]="table.wpxSearch" [nzExtra]="table.wpxTool">
+<nz-card [nzLoading]="table.ds.loading" [nzTitle]="table.wpxSearch">
   <wpx-table #table [wpxKey]="key!" [wpxApi]="dynamic" [wpxFields]="fields"></wpx-table>
 </nz-card>
