--- a/projects/settings/src/lib/security/audit/audit.component.html
+++ b/projects/settings/src/lib/security/audit/audit.component.html
@@ -1,5 +1,5 @@
-<nz-card nzTitle="审计工单">
-  <nz-list nzItemLayout="horizontal">
+<nz-card>
+  <nz-list nzSize="large" nzItemLayout="horizontal">
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
