--- a/projects/components/table/table.component.html
+++ b/projects/components/table/table.component.html
@@ -5,10 +5,10 @@
         <input
           (keyup.enter)="submitSearch()"
           [(ngModel)]="searchText"
-          style="width: 200px"
+          style="width: 180px"
           type="text"
           nz-input
-          placeholder="请输入关键词"
+          placeholder="关键词搜索"
         />
       </nz-input-group>
     </nz-col>
@@ -17,10 +17,10 @@
         <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
           <i nz-icon nzType="reload"></i>
         </button>
-        <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+        <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
           <i nz-icon nzType="clear"></i>
         </button>
-        <button nz-button nzType="text" nz-tooltip="高级搜索" (click)="openSearchForm()">
+        <button nz-button nzType="text" nz-tooltip="搜索" (click)="openSearchForm()">
           <i nz-icon nzType="filter"></i>
         </button>
       </nz-button-group>
@@ -64,7 +64,6 @@
         </nz-row>
       </form>
     </ng-container>
-
     <ng-template #footerTpl>
       <nz-space>
         <button *nzSpaceItem nz-button form="search"> <i nz-icon nzType="search"></i> 搜索 </button>
@@ -75,26 +74,21 @@
     </ng-template>
   </nz-drawer>
 </ng-template>
-
-<ng-template #toolRef> </ng-template>
-
-<ng-template #bulkRef>
-  <nz-alert nzType="info" nzBanner [nzMessage]="message"></nz-alert>
-  <ng-template #message>
-    <nz-row nzJustify="space-between">
-      <nz-col> 已选中 {{ ds.checkedNumber }} 项 </nz-col>
-      <nz-col></nz-col>
-      <nz-col style="text-align: right">
-        <a nz-button nzType="link" nzSize="small">操作<i nz-icon nzType="down"></i></a>
-        <a nz-button nzType="link" nzSize="small" (click)="ds.clearChecked()">取消选择</a>
-      </nz-col>
-    </nz-row>
+<nz-alert
+  *ngIf="ds.checkedNumber !== 0 && wpxBulk"
+  class="bulk"
+  nzType="info"
+  nzBanner
+  nzMessage="批量"
+  [nzDescription]="description"
+  [nzAction]="wpxBulk"
+>
+  <ng-template #description>
+    已选中 <nz-tag>{{ ds.checkedNumber }}</nz-tag> 项
   </ng-template>
-</ng-template>
-
+</nz-alert>
 <nz-table
   #basicTable
-  nzSize="small"
   [nzLoading]="ds.loading"
   [nzData]="ds.values"
   [nzScroll]="wpxScroll"
@@ -109,7 +103,7 @@
   <thead>
     <tr>
       <th
-        nzWidth="50px"
+        nzWidth="65px"
         nzLeft
         nzAlign="center"
         [nzChecked]="ds.checked"
@@ -130,7 +124,7 @@
           [(nzSortOrder)]="ds.sort[x.value]"
           (nzSortOrderChange)="getData(true)"
         >
-          {{ x.label }}
+          <b>{{ x.label }} </b>
           <ng-container *ngIf="keywords.has(x.value)">
             <i nz-icon nzType="tag" nz-tooltip="关键词"></i>
           </ng-container>
@@ -139,42 +133,28 @@
           </nz-resize-handle>
         </th>
       </ng-container>
-      <th nzWidth="64px" nzRight nzAlign="center">
+      <th nzWidth="100px" nzRight nzAlign="center">
         <button
           nz-button
           nzType="text"
-          nz-tooltip="设置"
           nz-popover
           nzPopoverPlacement="bottomRight"
-          nzPopoverTrigger="click"
           [nzPopoverTitle]="columnsTitle"
           [nzPopoverContent]="columnsContent"
         >
           <i nz-icon nzType="setting"></i>
           <ng-template #columnsTitle>
-            <nz-row nzJustify="space-between">
-              <nz-col>
-                <label nz-checkbox [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()">
-                  自定义宽度
-                </label>
-              </nz-col>
+            <nz-row style="padding: 0.5em 0" nzJustify="space-between">
+              <nz-col> 自定义宽度 </nz-col>
               <nz-col></nz-col>
-              <nz-col> </nz-col>
+              <nz-col>
+                <nz-switch [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()"></nz-switch>
+              </nz-col>
             </nz-row>
           </ng-template>
           <ng-template #columnsContent>
             <nz-checkbox-wrapper (nzOnChange)="updateColumnChecked()">
               <nz-space nzDirection="vertical">
-                <nz-radio-group
-                  *nzSpaceItem
-                  nzSize="small"
-                  [(ngModel)]="columnsHeight"
-                  (ngModelChange)="updateStorage()"
-                >
-                  <label nz-radio-button nzValue="default">默认</label>
-                  <label nz-radio-button nzValue="middle">中等</label>
-                  <label nz-radio-button nzValue="small">紧凑</label>
-                </nz-radio-group>
                 <label
                   *nzSpaceItem
                   nz-checkbox
@@ -207,9 +187,20 @@
       ></td>
       <ng-container *ngFor="let x of columnsDisplay">
         <td>
-          <p style="margin: 0" nz-typography nzEllipsis [nzEllipsisRows]="2">
-            {{ data[x.value] }}
-          </p>
+          <ng-container [ngSwitch]="(wpxFields | wpxMap: x.value).type">
+            <ng-container *ngSwitchCase="'bool'">
+              <ng-container *ngIf="data[x.value]; else isFalse">
+                <nz-badge nzStatus="processing"></nz-badge> 开启
+              </ng-container>
+              <ng-template #isFalse> <nz-badge nzStatus="default"></nz-badge> 关闭 </ng-template>
+            </ng-container>
+            <ng-container *ngSwitchCase="'datetime'">{{ data[x.value] | date: 'yyyy-MM-dd HH:mm:ss' }}</ng-container>
+            <ng-container *ngSwitchDefault>
+              <p style="margin: 0" nz-typography nzEllipsis [nzEllipsisRows]="2">
+                {{ data[x.value] }}
+              </p>
+            </ng-container>
+          </ng-container>
         </td>
       </ng-container>
       <td nzRight nzAlign="center">
