--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,7 @@
 .login {
   margin: 8% auto 0;
-  width: 360px;
+  width: 320px;
+  padding: 0 1em;
   border-radius: 3px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
@@ -10,7 +11,7 @@
   }
 
   h2 {
-    padding-bottom: 24px;
+    padding-bottom: 16px;
     text-align: center;
   }
 }
