--- a/projects/center/src/lib/mine/notebook/notebook.component.html
+++ b/projects/center/src/lib/mine/notebook/notebook.component.html
@@ -1,8 +1,6 @@
-<wpx-layout [wpxNoPadding]="true"></wpx-layout>
-
 <nz-layout class="note-container">
   <nz-sider class="note-sider" nzTheme="light" [nzWidth]="600">
-    <form nz-form nzLayout="vertical" style="padding: 1em">
+    <form nz-form nzLayout="vertical">
       <nz-form-item>
         <nz-form-label nzRequired>小记</nz-form-label>
         <nz-form-control>
