--- a/projects/center/src/lib/mine/workbench/workbench.component.html
+++ b/projects/center/src/lib/mine/workbench/workbench.component.html
@@ -1,6 +1,4 @@
-<wpx-layout></wpx-layout>
-
-<nz-row [nzGutter]="12">
+<nz-row style="padding: 8px" [nzGutter]="8">
   <nz-col nzFlex="320px">
     <nz-card>
       <div class="user">
