--- a/projects/center/src/lib/profile/linked/linked.component.html
+++ b/projects/center/src/lib/profile/linked/linked.component.html
@@ -1,8 +1,4 @@
-<wpx-layout></wpx-layout>
-
-<ng-template #title><b>帐号绑定</b></ng-template>
-
-<nz-card [nzTitle]="title">
+<nz-card>
   <nz-list nzSize="large">
     <nz-list-item>
       <nz-list-item-meta>
