--- a/projects/center/src/lib/profile/notify/notify.component.html
+++ b/projects/center/src/lib/profile/notify/notify.component.html
@@ -1,8 +1,4 @@
-<wpx-layout></wpx-layout>
-
-<ng-template #title><b>通知设置</b></ng-template>
-
-<nz-card [nzTitle]="title">
+<nz-card>
   <nz-table #basicTable nzSize="default" [nzData]="notify" [nzShowPagination]="false">
     <thead>
       <tr>
