--- a/projects/center/src/lib/profile/info/info.component.html
+++ b/projects/center/src/lib/profile/info/info.component.html
@@ -1,8 +1,4 @@
-<wpx-layout></wpx-layout>
-
-<ng-template #title><b>基本信息</b></ng-template>
-
-<nz-card [nzTitle]="title">
+<nz-card>
   <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
     <nz-row [nzGutter]="24">
       <nz-col nzFlex="600px">
