--- a/projects/settings/src/lib/application/enterprise/enterprise.component.html
+++ b/projects/settings/src/lib/application/enterprise/enterprise.component.html
@@ -1,8 +1,4 @@
-<wpx-layout [wpxSkip]="true"></wpx-layout>
-
-<ng-template #title><b>企业平台</b></ng-template>
-
-<nz-card [nzTitle]="title">
+<nz-card>
   <nz-list nzSize="large">
     <nz-list-item>
       <nz-list-item-meta>
