--- a/projects/components/dynamic/table/table.component.html
+++ b/projects/components/dynamic/table/table.component.html
@@ -1,9 +1,7 @@
-<wpx-layout>
-  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
-    <i nz-icon nzType="plus"></i>
-  </button>
-</wpx-layout>
+<ng-template #extra>
+  <button nz-button nzType="primary" (click)="form()"> 新增 </button>
+</ng-template>
 
-<nz-card [nzLoading]="table.ds.loading" [nzTitle]="table.wpxSearch">
+<nz-card [nzLoading]="table.ds.loading" [nzTitle]="table.wpxSearch" [nzExtra]="extra">
   <wpx-table #table [wpxKey]="key!" [wpxApi]="dynamic" [wpxFields]="fields"></wpx-table>
 </nz-card>
