--- a/projects/resources/src/lib/factory/pages/tab-validator/validator.component.html
+++ b/projects/resources/src/lib/factory/pages/tab-validator/validator.component.html
@@ -1,4 +1,4 @@
-<wpx-settings-pages-tabs [key]="key" [extra]="extra">
+<wpx-resources-factory-pages-tabs [key]="key" [extra]="extra">
   <ng-template #extra>
     <button form="form" nz-button nzType="primary" [disabled]="!form?.valid">更新验证</button>
   </ng-template>
@@ -20,4 +20,4 @@
       </nz-form-control>
     </nz-form-item>
   </form>
-</wpx-settings-pages-tabs>
+</wpx-resources-factory-pages-tabs>
