--- a/projects/resources/src/lib/factory/pages/pages.component.html
+++ b/projects/resources/src/lib/factory/pages/pages.component.html
@@ -1,22 +1,26 @@
-<wpx-layout [wpxNoPadding]="true" [wpxSkip]="true"> </wpx-layout>
-
 <nz-layout class="pages-container">
-  <nz-sider class="pages-sider" nzTheme="light" [nzWidth]="360">
-    <nz-space style="margin-top: 12px">
-      <nz-button-group *nzSpaceItem>
-        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
-          <i nz-icon nzType="reload"></i>
-        </button>
-        <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
-          <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
-        </button>
-      </nz-button-group>
-      <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-        <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
-      </nz-input-group>
-      <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
-    </nz-space>
-    <nz-divider style="margin: 12px 0"></nz-divider>
+  <nz-sider class="pages-sider" nzTheme="light" [nzWidth]="300">
+    <nz-row [nzGutter]="8">
+      <nz-col>
+        <nz-input-group nzSuffixIcon="search" style="width: 180px">
+          <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
+        </nz-input-group>
+      </nz-col>
+      <nz-col>
+        <nz-button-group>
+          <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+            <i nz-icon nzType="reload"></i>
+          </button>
+          <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">
+            <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+          </button>
+          <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
+            <i nz-icon nzType="sisternode" nzTheme="outline"></i>
+          </button>
+        </nz-button-group>
+      </nz-col>
+    </nz-row>
+    <nz-divider style="margin: 8px 0"></nz-divider>
     <nz-tree
       #tree
       nzBlockNode
