--- a/projects/resources/src/lib/factory/pages/tab-indexes/indexes.component.html
+++ b/projects/resources/src/lib/factory/pages/tab-indexes/indexes.component.html
@@ -1,4 +1,4 @@
-<wpx-settings-pages-tabs [key]="key" [extra]="extra">
+<wpx-resources-factory-pages-tabs [key]="key" [extra]="extra">
   <ng-template #extra>
     <button nz-button (click)="form()"> 创建索引 </button>
   </ng-template>
@@ -75,4 +75,4 @@
       </tr>
     </tbody>
   </nz-table>
-</wpx-settings-pages-tabs>
+</wpx-resources-factory-pages-tabs>
