--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,11 @@
   height: 100%;
 }
 
-.container {
+.wpx-container {
   padding-top: 45px;
 }
 
-.sider {
+.wpx-sider {
   overflow: auto;
   height: 100%;
   border-right: 1px solid #f0f0f0;
