--- a/projects/settings/src/lib/settings.component.html
+++ b/projects/settings/src/lib/settings.component.html
@@ -15,14 +15,11 @@
         </li>
         <li nz-menu-group nzTitle="组织">
           <ul>
-            <li nz-menu-item nzMatchRouter [routerLink]="['organize', 'departments']">
-              <i nz-icon nzType="apartment"></i> <span>部门</span>
-            </li>
             <li nz-menu-item nzMatchRouter [routerLink]="['organize', 'roles']">
               <i nz-icon nzType="switcher"></i> <span>权限组</span>
             </li>
             <li nz-menu-item nzMatchRouter [routerLink]="['organize', 'users']">
-              <i nz-icon nzType="team"></i> <span>成员</span>
+              <i nz-icon nzType="team"></i> <span>团队成员</span>
             </li>
           </ul>
         </li>
