--- a/projects/settings/src/lib/organize/roles/roles.component.html
+++ b/projects/settings/src/lib/organize/roles/roles.component.html
@@ -16,7 +16,7 @@
 </ng-template>
 
 <ng-template #bulk>
-  <a nz-button nzType="link" nzSize="small" (click)="table.ds.clearChecked()">取消选择</a>
+  <a nz-button nzType="link" nzSize="small" (click)="table.data.clearChecked()">取消选择</a>
   <br />
   <a style="float: right" nz-button nzType="link" nzSize="small" nzDanger (click)="bulkDelete()">删除</a>
 </ng-template>
