--- a/projects/common/src/lib/nav/nav.component.html
+++ b/projects/common/src/lib/nav/nav.component.html
@@ -7,13 +7,13 @@
 <ng-template #navTemplate let-pages>
   <ng-container *ngFor="let page of pages | wpxSort: 'sort'">
     <ng-container *ngIf="page.kind !== 'group'; else isGroup">
-      <li nz-menu-item nzMatchRouter [routerLink]="['/pages', page['_id']]" [nzPaddingLeft]="page['_path'].length * 24">
+      <li nz-menu-item nzMatchRouter [routerLink]="['/pages', page._id]" [nzPaddingLeft]="page['_path'].length * 24">
         <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page['icon']"></i>
         <span>{{ page['name'] }}</span>
       </li>
     </ng-container>
     <ng-template #isGroup>
-      <li nz-submenu [nzOpen]="page['_id'] | OpenState: wpx.pageId" [nzPaddingLeft]="page['_path'].length * 24">
+      <li nz-submenu [nzOpen]="page._id | OpenState: wpx.pageId" [nzPaddingLeft]="page['_path'].length * 24">
         <span title>
           <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page['icon']"></i>
           <span>{{ page['name'] }}</span>
