--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<app-whiteboard>
+<app-stage>
   <nz-card class="login">
     <div class="logo">
       <nz-avatar [nzSize]="100" nzIcon="user"></nz-avatar>
@@ -47,4 +47,4 @@
       </nz-form-item>
     </form>
   </nz-card>
-</app-whiteboard>
+</app-stage>
